--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.password=1234
 #cofigura a criação das tabelas caso ainda não exista
 spring.jpa.generate-ddl=true
 #Configura para que a tabela já criada seja dropada e recriada
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
 spring.jpa.open-in-view=true
 spring.jpa.show-sql=true
